Add nftables + nginx + Bluemap instructions