@@ -1,9 +1,17 @@
 ### 411
-This repo roughly documents the steps I followed to setup a Minecraft server on an Ubuntu VPS for the first time
-* **Heavily** influenced by [WilhelmRoscher/minecraft-systemd-service-file](https://github.com/WilhelmRoscher/minecraft-systemd-service-file)
-* [Minecraft Wiki](https://minecraft.wiki/w/Tutorials/Setting_up_a_server) is another insightful reference
+This repo documents steps taken to run a Minecraft 1.21.3 server on an Ubuntu VPS
 
-### Setup SSH config (optional)
+### Resources
+* [Paper MC](https://docs.papermc.io/paper/getting-started)
+* [WilhelmRoscher - MC systemd service file](https://github.com/WilhelmRoscher/minecraft-systemd-service-file)
+* [brucethemoose - MC Performance Flags Benchmarks](https://github.com/brucethemoose/Minecraft-Performance-Flags-Benchmarks)
+* [YouHaveTrouble - MC optimization](https://github.com/YouHaveTrouble/minecraft-optimization)
+* [Minecraft Wiki](https://minecraft.wiki/w/Tutorials/Setting_up_a_server)
+* [nftables Wiki](https://wiki.nftables.org/wiki-nftables/index.php)
+* [nginx docs](https://docs.nginx.com/nginx/admin-guide)
+* [Bluemap docs](https://bluemap.bluecolored.de)
+
+### SSH config (optional)
 Add VPS entry to your ssh config (~/.ssh/config)
 ```
 Host vps
@@ -13,55 +21,61 @@ Host vps
   IdentityFile ~/.ssh/id_ed25519
 ```
 
-### Prepare VPS environment
-We'll log in as root to simplify all remaining steps
+### SSH to VPS
+This README assumes root is used to setup the server
 ```
 ssh vps
 
 su -
 ```
 
-Install suitable Java runtime environment
+### Install JRE
 ```
 apt update && apt upgrade
 apt install openjdk-21-jre-headless
 ```
 
-Setup Linux group + user to run server ([PoLP](https://en.wikipedia.org/wiki/Principle_of_least_privilege) 😂)
+### Setup System Group + User
+[PoLP](https://en.wikipedia.org/wiki/Principle_of_least_privilege) 😂
 ```
 mkdir -p /var/minecraft
-groupadd -f minecraft
-useradd -g minecraft -s /bin/bash -d /var/minecraft minecraft
+groupadd -f -r minecraft
+useradd -g minecraft -s /sbin/nologin -d /var/minecraft minecraft
 chown -R minecraft:minecraft /var/minecraft
 ```
 
-Download server jar
-* the [official download](https://www.minecraft.net/en-us/download/server) is limited to latest release
-* for historical releases, consider using https://mcversions.net
-
+### Install server JAR
+Find desired PaperMC server versions [here](https://papermc.io/downloads/all)
 ```
-curl "https://piston-data.mojang.com/v1/objects/59353fb40c36d304f2035d51e7d6e6baa98dc05c/server.jar" > /var/minecraft/server.jar
+curl "https://api.papermc.io/v2/projects/paper/versions/1.21.3/builds/60/downloads/paper-1.21.3-60.jar" > /var/minecraft/server.jar
 ```
 
-### Complete server config
-Accept EULA after first startup attempt and start configuring your JVM settings
-* -Xmx sets max heap size
-* -Xms sets initial heap size
-* -XX:+UnlockExperimentalVMOptions enables use of non-default [garbage collector (GC)](https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)) settings
-* -XX:+UseZGC to use the [Z Garbage Collector](https://docs.oracle.com/en/java/javase/21/gctuning/available-collectors.html)
+Verify checksum
+```
+sha256sum /var/minecraft/server
+chown -R minecraft:minecraft /var/minecraft
+```
 
+### Initial startup
+Accept EULA after first startup
 ```
 /usr/bin/java -jar /var/minecraft/server.jar --nogui
 vim /var/minecraft/eula.txt
+```
 
-/usr/bin/java -Xmx3072M -Xms1024M -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -jar server.jar --nogui
+### JVM flags
+* -Xmx sets max heap size
+* -Xms sets initial heap size
+
+```
+/usr/bin/java -Xms12G -Xmx12G -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:+ZGenerational -jar server.jar --nogui
 ```
 
 Configure server.properties
-* use Minecraft wiki [Server.properties](https://minecraft.wiki/w/Server.properties) for a thorough description of each field
-* ex: set difficulty to hard and set server-port to 443
+* use [Minecraft wiki - Server.properties](https://minecraft.wiki/w/Server.properties) for a thorough description of each field
+* ex: set difficulty to hard, server-port to 444
 
-### Setup Systemd service
+### systemd Service Setup
 Setup minecraft systemd service
 * copy/paste using the minecraft.service file in this repo
 * set ExecStart to match your JVM tuning in the previous setps
@@ -71,10 +85,10 @@ touch /etc/systemd/system/minecraft.service
 vim /etc/systemd/system/minecraft.service
 ```
 
-### Misc systemd
-[Arch](https://wiki.archlinux.org/title/Systemd) has helpful documentation here
+### systemd misc commands
+[Arch - systemd](https://wiki.archlinux.org/title/Systemd) has helpful documentation here
 
-Start a systemd service (.service is optional)
+Start a systemd service
 ```
 systemctl start minecraft.service
 ```
@@ -110,3 +124,60 @@ journalctl -u minecraft -f
 ```
 
 Setting AmbientCapabilities to CAP_NET_BIND_SERVICE allows one to start a server on a [priviledged port](https://www.w3.org/Daemon/User/Installation/PrivilegedPorts.html)
+
+### nftables setup
+[nftables - Quick reference-nftables in 10 minutes](https://wiki.nftables.org/wiki-nftables/index.php/Quick_reference-nftables_in_10_minutes)
+
+Setup nftables config
+* drop all inbound, forward traffic by default
+    * accept traffic on established/related connections, drop invalid connections
+    * accept traffic on loopback interface
+    * drop ipv6 traffic
+    * accept TCP traffic on ports 22, 443, 444
+* accept outbound traffic by default
+
+```
+vim /etc/nftables.conf
+```
+
+Start nftables on startup
+```
+systemctl enable nftables
+```
+
+Start nftables
+```
+systemctl start nftables
+```
+
+### Bluemap setup
+Follow intructions at [Bluemap - Installation](https://bluemap.bluecolored.de/wiki/getting-started/Installation.html)
+
+```
+curl -L "https://github.com/BlueMap-Minecraft/BlueMap/releases/download/v5.5/bluemap-5.5-paper.jar" > /var/minecraft/plugins/bluemap-5.5-paper.jar
+chown -R minecraft:minecraft /var/minecraft
+```
+
+Restart server
+```
+systemctl restart minecraft.service
+```
+
+Accept required downloads
+```
+sudo -u minecraft vim /var/minecraft/plugins/BlueMap/core.conf
+```
+
+### nginx setup
+Follow [nginx - linux packages](https://nginx.org/en/linux_packages.html#Ubuntu) installation instructions
+
+
+Start nginx on startup
+```
+systemctl enable nginx
+```
+
+Start nginx
+```
+systemctl start nginx
+```
